taskapi-gitops/overlays/staging/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskapi
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: taskapi
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
