taskapi-gitops/overlays/staging/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /staging-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: taskapi
                port:
                  number: 80
